--- a/01.Vectorization demo.ipynb
+++ b/01.Vectorization demo.ipynb
@@ -81,6 +81,210 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### broadcasting\n",
+    "(m, n)矩阵 $+、-、*、/$ 一个(1,n)矩阵，python会将这个(1,n)矩阵复制成(m, n)矩阵"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### numpy vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.random.randn(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.24774803  0.21885057  0.71506325  0.80313516  0.97970358]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a) # neither a row vector nor a column vector, just a rank 1 array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.24774803  0.21885057  0.71506325  0.80313516  0.97970358]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.T.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.22543529037\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.dot(a, a.T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.34528812]\n",
+      " [-0.55700762]\n",
+      " [-1.29550808]\n",
+      " [ 0.44638784]\n",
+      " [-1.31250885]]\n",
+      "(5, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randn(5, 1) # suggest type\n",
+    "print(a)\n",
+    "print(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.34528812 -0.55700762 -1.29550808  0.44638784 -1.31250885]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.11922389 -0.19232811 -0.44732355  0.15413242 -0.45319372]\n",
+      " [-0.19232811  0.31025748  0.72160787 -0.24864143  0.73107743]\n",
+      " [-0.44732355  0.72160787  1.6783412  -0.57829906  1.70036583]\n",
+      " [ 0.15413242 -0.24864143 -0.57829906  0.19926211 -0.585888  ]\n",
+      " [-0.45319372  0.73107743  1.70036583 -0.585888    1.72267948]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.dot(a, a.T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert(a.shape == (5,1)) # 检查维度"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
